Actualizar index.html: agregar párrafo adicional

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Bienvenidos a Mi Proyecto</h1>
     <p>Este es mi primer archivo HTML gestionado con Git.</p>
+    <p>A ver si esto funciona</p>
 </body>
 </html>
